--- a/task-manager/src/main/resources/application.properties
+++ b/task-manager/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=task-manager
+spring.datasource.url = jdbc:mysql://localhost/task_manager
+spring.datasource.username = root
+spring.datasource.password = The1stm@n
+
+spring.jpa.show-sql = true
+spring.jpa.generate-ddl = true
+spring.jpa.hibernate.ddl.auto = update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
